Modify the error of the mic indicator

--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
         #send-button,
         #menu-button,
         #attachment-button {
+			position: relative;
             border-radius: 50%;
             padding: 12px;
             background-color: var(--accent);
@@ -5651,3 +5652,4 @@ function exportAllUserData() {
     </script>
 </body>
 </html>
+
