--- a/index.html
+++ b/index.html
@@ -222,17 +222,16 @@
         /* --- End Landing Page Styles --- */
 
        .container {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    max-width: 1400px;
-    gap: 16px;
-    margin: 0 auto;
-    /* --- ADDED THESE LINES --- */
-    height: 100vh; /* Make the container fill the viewport height */
-    padding: 16px;  /* Add padding for spacing */
-    box-sizing: border-box; /* Include padding in the height calculation */
-}
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            max-width: 1400px;
+            gap: 16px;
+            margin: 0 auto;
+            height: 100vh;
+            padding: 16px;
+            box-sizing: border-box;
+        }
 
         .sidebar-left {
             display: flex;
@@ -250,17 +249,41 @@
             box-shadow: var(--shadow);
             transition: transform 0.3s ease;
 			
-        @keyframes pulse {
-          0%, 100% { transform: scale(1.05); }
-          50% { transform: scale(1.08); }
+        /* --- NEW ANIMATIONS --- */
+        /* A more subtle "breathing" animation */
+        @keyframes breathing {
+          0%, 100% {
+            transform: scale(1);
+            opacity: 1;
+          }
+          50% {
+            transform: scale(1.03);
+            opacity: 0.9;
+          }
         }
+
+        /* Update the 'thinking' class to use the new animation */
         .centered-image.thinking {
-            animation: pulse 1.5s ease-in-out infinite;
+            animation: breathing 4s ease-in-out infinite;
         }
+
+        /* New animation for the speaking glow */
+        @keyframes speakingGlow {
+          0%, 100% {
+            box-shadow: 0 0 15px var(--accent);
+            transform: scale(1.05);
+          }
+          50% {
+            box-shadow: 0 0 35px var(--accent);
+            transform: scale(1.07);
+          }
+        }
+
+        /* Update the 'speaking' class to use the new animation */
         .centered-image.speaking {
-          box-shadow: 0 0 25px var(--accent);
-          transform: scale(1.07);
+          animation: speakingGlow 1.5s ease-in-out infinite;
         }
+        /* --- END NEW ANIMATIONS --- */
 			
         }
 
@@ -278,23 +301,19 @@
 
         /* --- GLASS STYLES APPLIED --- */
         .input-container {
-    width: 100%;
-    max-width: 900px; 
-    background: var(--chat-bg);
-    backdrop-filter: blur(10px); /* --- Add Blur --- */
-    border-radius: 8px; 
-    padding: 12px;
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    box-shadow: var(--shadow);
-    border: 1px solid var(--glass-border); /* --- Add Glass Border --- */
-    /* --- REMOVED THESE LINES --- */
-    /* position: sticky; */
-    /* bottom: 16px; */
-    /* --- END REMOVAL --- */
-    z-index: 10;
-}
+            width: 100%;
+            max-width: 900px; 
+            background: var(--chat-bg);
+            backdrop-filter: blur(10px);
+            border-radius: 8px; 
+            padding: 12px;
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            box-shadow: var(--shadow);
+            border: 1px solid var(--glass-border);
+            z-index: 10;
+        }
 
         /* --- GLOSS STYLES APPLIED --- */
         #mic-button,
@@ -327,8 +346,8 @@
           #send-button:active,
           #menu-button:active,
           #attachment-button:active {
-          transform: scale(0.92); /* Shrinks the button slightly */
-          transition: transform 0.1s ease; /* Makes the press/release feel snappy */
+          transform: scale(0.92);
+          transition: transform 0.1s ease;
           }
 
         #mic-button svg,
@@ -363,10 +382,10 @@
             width: 100%;
             max-width: 900px; 
             background: var(--chat-bg);
-            backdrop-filter: blur(10px); /* --- Add Blur --- */
+            backdrop-filter: blur(10px);
             border-radius: 12px; 
             box-shadow: var(--shadow);
-            border: 1px solid var(--glass-border); /* --- Add Glass Border --- */
+            border: 1px solid var(--glass-border);
             padding: 16px;
             overflow-y: auto;
             display: flex;
@@ -439,7 +458,7 @@
 
         .helen-message {
             align-self: flex-start;
-            background-color: var(--bg-primary); /* Use solid white for contrast */
+            background-color: var(--bg-primary);
             box-shadow: var(--shadow);
             color: var(--text-primary);
             border-bottom-left-radius: 8px; 
@@ -495,9 +514,9 @@
             max-width: 400px;
             height: 100%;
             background: var(--chat-bg);
-            backdrop-filter: blur(10px); /* --- Add Blur --- */
+            backdrop-filter: blur(10px);
             box-shadow: -4px 0 20px rgba(0, 0, 0, 0.1);
-            border-left: 1px solid var(--glass-border); /* --- Add Glass Border --- */
+            border-left: 1px solid var(--glass-border);
             transform: translateX(100%);
             transition: transform 0.3s ease-in-out;
             display: flex;
@@ -1042,11 +1061,11 @@
             width: 100%;
             max-width: 900px; 
             background: var(--chat-bg);
-            backdrop-filter: blur(10px); /* --- Add Blur --- */
+            backdrop-filter: blur(10px);
             border-radius: 12px; 
             padding: 8px 16px;
             box-shadow: var(--shadow);
-            border: 1px solid var(--glass-border); /* --- Add Glass Border --- */
+            border: 1px solid var(--glass-border);
         }
         #level-status-text {
             font-size: 0.8rem;
@@ -1552,7 +1571,6 @@
             background: var(--accent);
             color: white;
         }
-
 
     </style>
 </head>
@@ -3019,62 +3037,73 @@
         }
 
         // --- Speech Recognition Logic ---
-        function startListening() {
-            if (!SpeechRecognition) {
-                addMessageToChat("Speech recognition is not supported in this browser.", "helen", false, false);
-                return;
-            }
-            recognition = new SpeechRecognition();
-            recognition.continuous = true;
-            recognition.interimResults = true;
-            recognition.lang = 'en-US';
-            recognition.onstart = () => {
-                isListening = true;
-                micButton.classList.add('listening');
-                userActivatedAudio = true;
-            };
-            recognition.onresult = (event) => {
-                let interimTranscript = '';
-                for (let i = event.resultIndex; i < event.results.length; i++) {
-                    const transcript = event.results[i][0].transcript;
-                    if (event.results[i].isFinal) finalTranscript += transcript.trim() + ' ';
-                    else interimTranscript += transcript;
-                }
-                const now = Date.now();
-                if (finalTranscript.trim() !== '' && now - lastProcessedTime > DEBOUNCE_MS) {
-                    handleMessage(finalTranscript.trim(), 'voice');
-                    finalTranscript = '';
-                    lastProcessedTime = now;
-                }
-            };
-            recognition.onend = () => {
-                isListening = false;
-                micButton.classList.remove('listening');
-                if (shouldBeListening) recognition.start();
-                else stopAudioProcessing();
-            };
-			
-			
-            recognition.onerror = (event) => {
-    console.error('Speech recognition error:', event.error);
-
-    // Don't stop the loop for a simple timeout
-    if (event.error === 'no-speech') {
-        return; // Just ignore it and let onend handle the restart
-    }
-
-    // For all OTHER errors, stop listening
-    isListening = false;
-    micButton.classList.remove('listening');
-    shouldBeListening = false;
-    showNotification(`Speech recognition error: ${event.error}`, 'error');
-    userActivatedAudio = false;
-
-            };
-            shouldBeListening = true;
-            recognition.start();
-            setupAudioProcessing();
+            function startListening() {
+        if (!SpeechRecognition) {
+            addMessageToChat("Speech recognition is not supported in this browser.", "helen", false, false);
+            return;
         }
+        recognition = new SpeechRecognition();
+        recognition.continuous = true;
+        recognition.interimResults = true;
+        recognition.lang = 'en-US';
+
+        recognition.onstart = () => {
+            isListening = true;
+            micButton.classList.add('listening');
+            userActivatedAudio = true;
+        };
+
+        // --- THIS IS THE CORRECT "GEMINI LIVE" FIX ---
+        // This fires when the browser *detects your voice*
+        recognition.onspeechstart = () => {
+            if (isSpeaking) {
+                SpeechSynthesis.cancel(); // Stop Helen from talking
+
+                // Manually clear the speaking state
+                isSpeaking = false;
+                document.querySelector('.centered-image').classList.remove('speaking');
+            }
+        };
+        // --- END OF FIX ---
+
+        recognition.onresult = (event) => {
+            let interimTranscript = '';
+            for (let i = event.resultIndex; i < event.results.length; i++) {
+                const transcript = event.results[i][0].transcript;
+                if (event.results[i].isFinal) finalTranscript += transcript.trim() + ' ';
+                else interimTranscript += transcript;
+            }
+            const now = Date.now();
+            if (finalTranscript.trim() !== '' && now - lastProcessedTime > DEBOUNCE_MS) {
+                handleMessage(finalTranscript.trim(), 'voice');
+                finalTranscript = '';
+                lastProcessedTime = now;
+            }
+        };
+
+        recognition.onend = () => {
+            isListening = false;
+            micButton.classList.remove('listening');
+            if (shouldBeListening) recognition.start();
+            else stopAudioProcessing();
+        };
+
+        recognition.onerror = (event) => {
+            console.error('Speech recognition error:', event.error);
+            if (event.error === 'no-speech') {
+                return; // Just ignore it and let onend handle the restart
+            }
+            isListening = false;
+            micButton.classList.remove('listening');
+            shouldBeListening = false;
+            showNotification(`Speech recognition error: ${event.error}`, 'error');
+            userActivatedAudio = false;
+        };
+
+        shouldBeListening = true;
+        recognition.start();
+        setupAudioProcessing();
+    }
 
         function stopListening() {
             if (recognition) {
@@ -3082,6 +3111,7 @@
                 recognition.stop();
                 stopAudioProcessing();
             }
+
         }
 
         // --- UPDATED Function for Contextual Awareness ---
@@ -3892,6 +3922,9 @@ if (pendingQuestion) {
         micButton.addEventListener('click', () => {
             userActivatedAudio = true;
             if (isListening) stopListening();
+			
+			
+			
             else startListening();
         });
 
